--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -33,23 +33,23 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R9I-VQ-RtG">
-                                            <rect key="frame" x="95" y="11" width="50.5" height="22"/>
+                                            <rect key="frame" x="95" y="11" width="49" height="22"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="22" id="i1l-wZ-rJG"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k2J-Db-Bdb">
                                             <rect key="frame" x="95" y="33" width="264" height="68"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="200" text="username" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfn-Ih-K6j">
-                                            <rect key="frame" x="16" y="84" width="71" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                            <rect key="frame" x="16" y="84" width="71" height="20.5"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="10"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -124,10 +124,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NUH-LA-UYg" customClass="RoundButton" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="122" y="307" width="139" height="54"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" layoutMarginsFollowReadableWidth="YES" image="TwitterLogoBlue" translatesAutoresizingMaskIntoConstraints="NO" id="dMw-hV-2O7">
+                                <rect key="frame" x="87.5" y="233.5" width="200" height="200"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Definitely Not Twitter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lYT-DE-Q1M">
+                                <rect key="frame" x="102" y="233.5" width="178" height="24"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NUH-LA-UYg" customClass="RoundButton" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="118" y="413" width="139" height="36"/>
                                 <color key="backgroundColor" red="0.018725886897950628" green="0.64518584508674426" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
                                 <state key="normal" title="Login">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -144,12 +153,21 @@
                         <viewLayoutGuide key="safeArea" id="kTe-bc-pj3"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="NUH-LA-UYg" firstAttribute="centerX" secondItem="NsZ-PT-R03" secondAttribute="centerX" constant="4" id="jwM-bV-9vg"/>
-                            <constraint firstItem="NUH-LA-UYg" firstAttribute="centerY" secondItem="NsZ-PT-R03" secondAttribute="centerY" id="w28-N3-TS9"/>
+                            <constraint firstItem="dMw-hV-2O7" firstAttribute="centerY" secondItem="NsZ-PT-R03" secondAttribute="centerY" id="4FY-qh-ukD"/>
+                            <constraint firstItem="NUH-LA-UYg" firstAttribute="centerX" secondItem="NsZ-PT-R03" secondAttribute="centerX" id="9Y2-zU-eE8"/>
+                            <constraint firstItem="dMw-hV-2O7" firstAttribute="centerX" secondItem="NsZ-PT-R03" secondAttribute="centerX" id="O2y-Sh-x4y"/>
+                            <constraint firstItem="NUH-LA-UYg" firstAttribute="top" secondItem="lYT-DE-Q1M" secondAttribute="bottom" constant="155.5" id="Vtw-gK-0lo"/>
+                            <constraint firstItem="kTe-bc-pj3" firstAttribute="bottom" secondItem="NUH-LA-UYg" secondAttribute="bottom" constant="218" id="bN8-Ut-o3F"/>
+                            <constraint firstItem="lYT-DE-Q1M" firstAttribute="leading" secondItem="kTe-bc-pj3" secondAttribute="leading" constant="102" id="h5b-8s-Gh3"/>
+                            <constraint firstItem="dMw-hV-2O7" firstAttribute="top" secondItem="lYT-DE-Q1M" secondAttribute="top" id="hEI-ko-YGS"/>
+                            <constraint firstItem="dMw-hV-2O7" firstAttribute="centerX" secondItem="NsZ-PT-R03" secondAttribute="centerX" id="iPf-iZ-ien"/>
+                            <constraint firstItem="NUH-LA-UYg" firstAttribute="leading" secondItem="kTe-bc-pj3" secondAttribute="leading" constant="118" id="mir-kl-dGL"/>
+                            <constraint firstItem="dMw-hV-2O7" firstAttribute="centerY" secondItem="NsZ-PT-R03" secondAttribute="centerY" id="tbg-Dp-8xb"/>
+                            <constraint firstItem="kTe-bc-pj3" firstAttribute="trailing" secondItem="NUH-LA-UYg" secondAttribute="trailing" constant="118" id="z2v-2t-pEe"/>
                         </constraints>
                     </view>
                     <connections>
-                        <segue destination="dua-gn-VjO" kind="presentation" identifier="loginToHome" modalPresentationStyle="fullScreen" id="hrF-TP-7mE"/>
+                        <segue destination="dua-gn-VjO" kind="presentation" identifier="loginToHome" modalPresentationStyle="fullScreen" id="i1S-24-YXl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sq1-Yq-e66" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -159,10 +177,11 @@
     </scenes>
     <designables>
         <designable name="NUH-LA-UYg">
-            <size key="intrinsicContentSize" width="84" height="54"/>
+            <size key="intrinsicContentSize" width="47" height="36"/>
         </designable>
     </designables>
     <resources>
+        <image name="TwitterLogoBlue" width="200" height="200"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
